<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/top_title" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_device_name"
            android:textColor="@color/color_767676"
            android:textSize="@dimen/text_size_28px" />

        <TextView
            android:id="@+id/text_setting_printer_device_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="130dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/color_303030"
            android:textSize="@dimen/text_size_32px"
            tools:text="KDC300[003014]" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/text_rename"
            android:textColor="@color/color_767676"
            android:textSize="@dimen/text_size_28px" />

        <EditText
            android:id="@+id/edit_setting_printer_device_rename"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="130dp"
            android:ellipsize="end"
            android:hint="@string/text_write_hint"
            android:maxLines="1"
            android:textColor="@color/color_303030"
            android:textColorHint="@color/color_d4d3d3"
            android:textSize="@dimen/text_size_32px" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="20dp"
        android:text="@string/text_device_name_info"
        android:textColor="@color/color_767676"
        android:textSize="@dimen/text_size_24px" />

    <Button
        android:id="@+id/btn_setting_printer_device_rename_confirm"
        android:layout_width="131dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/custom_button_pressed_40"
        android:text="@string/button_confirm"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_36px" />
</LinearLayout>