<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_f6f6f6"
    android:orientation="vertical">

    <include layout="@layout/top_title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:text="@string/text_delivery_data_scan"
        android:textColor="@color/color_767676"
        android:textSize="@dimen/text_size_28px" />

    <RelativeLayout
        android:id="@+id/layout_scan_confirm_my_delivery_order"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:paddingEnd="20dp"
        android:paddingStart="20dp">

        <TextView
            android:id="@+id/text_scan_confirm_my_delivery_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:text="@string/button_confirm_my_delivery_order"
            android:textColor="@color/color_303030"
            android:textSize="@dimen/text_size_32px" />

        <Button
            android:layout_width="6dp"
            android:layout_height="11dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/qdrive_setting_icon_arrow_r" />
    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white"
        android:paddingEnd="20dp"
        android:paddingStart="20dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_ebebeb" />
    </FrameLayout>

    <RelativeLayout
        android:id="@+id/layout_scan_delivery_done"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:paddingEnd="20dp"
        android:paddingStart="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:text="@string/navi_sub_delivery_done"
            android:textColor="@color/color_303030"
            android:textSize="@dimen/text_size_32px" />

        <Button
            android:layout_width="6dp"
            android:layout_height="11dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/qdrive_setting_icon_arrow_r" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_ebebeb" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:text="@string/msg_delivery_scan1"
        android:textColor="@color/color_767676"
        android:textSize="@dimen/text_size_26px" />

    <TextView
        android:id="@+id/text_scan_delivery_scan_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:lineSpacingMultiplier="1.2"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:text="@string/msg_delivery_scan2"
        android:textColor="@color/color_767676"
        android:textSize="@dimen/text_size_26px" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="30dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:text="@string/text_pickup_scan"
        android:textColor="@color/color_767676"
        android:textSize="@dimen/text_size_28px" />

    <RelativeLayout
        android:id="@+id/layout_scan_pickup_cnr"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:paddingEnd="20dp"
        android:paddingStart="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:text="@string/navi_sub_pickup"
            android:textColor="@color/color_303030"
            android:textSize="@dimen/text_size_32px" />

        <Button
            android:layout_width="6dp"
            android:layout_height="11dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/qdrive_setting_icon_arrow_r" />
    </RelativeLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_ebebeb" />

    <LinearLayout
        android:id="@+id/layout_scan_self_collection_shown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:text="@string/text_self_scan"
            android:textColor="@color/color_767676"
            android:textSize="@dimen/text_size_28px" />

        <RelativeLayout
            android:id="@+id/layout_scan_self_collection"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:paddingEnd="20dp"
            android:paddingStart="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:text="@string/navi_sub_self"
                android:textColor="@color/color_303030"
                android:textSize="@dimen/text_size_32px" />

            <Button
                android:layout_width="6dp"
                android:layout_height="11dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@drawable/qdrive_setting_icon_arrow_r" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_ebebeb" />
    </LinearLayout>
</LinearLayout>