<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_paired_devices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#666"
            android:padding="5dp"
            android:text="@string/title_paired_devices"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_24px"
            android:visibility="gone" />

        <ListView
            android:id="@+id/list_paired_devices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:stackFromBottom="true"
            tools:listitem="@layout/item_device_name" />

        <TextView
            android:id="@+id/text_other_devices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#666"
            android:padding="5dp"
            android:text="@string/title_other_devices"
            android:textColor="#fff"
            android:textSize="@dimen/text_size_24px"
            android:visibility="gone" />

        <ListView
            android:id="@+id/list_other_devices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:stackFromBottom="true"
            tools:listitem="@layout/item_device_name" />

        <Button
            android:id="@+id/btn_scan_devices"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/border_round_5_cccccc"
            android:text="@string/button_scan"
            android:textAllCaps="false"
            android:textSize="@dimen/text_size_32px" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@drawable/border_round_5_cccccc"
            android:text="@string/button_cancel"
            android:textAllCaps="false"
            android:textSize="@dimen/text_size_32px" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />
</RelativeLayout>